cmake_minimum_required(VERSION 3.12.1)

add_library(Partialsum STATIC partialsum.cpp)
add_library(Maze STATIC maze.cpp)
add_library(SectionScheduling STATIC section_scheduling.cpp)
add_library(BestCowLine STATIC best_cow_line.cpp)
add_library(Saruman STATIC saruman.cpp)
add_library(FenceRepair STATIC fence_repair.cpp)
add_library(FoodChain STATIC food_chain.cpp)
add_library(Knapsack STATIC knapsack.cpp)

