cmake_minimum_required(VERSION 3.12.1)

add_library(Partialsum STATIC partialsum.cpp)
add_library(Maze STATIC maze.cpp)
add_library(SectionScheduling STATIC section_scheduling.cpp)
add_library(BestCowLine STATIC best_cow_line.cpp)
add_library(Saruman STATIC saruman.cpp)
add_library(FenceRepair STATIC fence_repair.cpp)
add_library(FoodChain STATIC food_chain.cpp)
add_library(Knapsack STATIC knapsack.cpp)
add_library(Lcs STATIC lcs.cpp)
add_library(NoLimitKnapsack STATIC nlknapsack.cpp)
add_library(Knapsack2 STATIC knapsack2.cpp)
add_library(NumLimitedPartialSum STATIC num_limited_partial_sum.cpp)
add_library(Lis STATIC lis.cc)
add_library(PartitionNum STATIC partition_num.cc)
add_library(MultiChoose STATIC multi_choose.cc)
add_library(Truck STATIC truck.cc)
add_library(BipartiteGraph bipartite_graph.cc)
