add_executable(TestPartialsum test_partialsum.cpp)
target_link_libraries(TestPartialsum Partialsum gtest_main)

add_executable(TestMaze test_maze.cpp)
target_link_libraries(TestMaze Maze gtest_main)

add_executable(TestSectionScheduling test_section_scheduling.cpp)
target_link_libraries(TestSectionScheduling SectionScheduling gtest_main)

add_executable(TestBestCowLine test_best_cow_line.cpp)
target_link_libraries(TestBestCowLine BestCowLine gtest_main)

add_executable(TestSaruman test_saruman.cpp)
target_link_libraries(TestSaruman Saruman gtest_main)

add_executable(TestFenceRepair test_fence_repair.cpp)
target_link_libraries(TestFenceRepair FenceRepair gtest_main)

add_executable(TestFoodChain test_food_chain.cpp)
target_link_libraries(TestFoodChain FoodChain gtest_main)

add_executable(TestKnapsack test_knapsack.cpp)
target_link_libraries(TestKnapsack Knapsack gtest_main)

add_executable(TestLcs test_lcs.cpp)
target_link_libraries(TestLcs Lcs gtest_main)

add_executable(TestNoLimitKnapsack test_nlknapsack.cpp)
target_link_libraries(TestNoLimitKnapsack NoLimitKnapsack gtest_main)

add_executable(TestKnapsack2 test_knapsack2.cpp)
target_link_libraries(TestKnapsack2 Knapsack2 gtest_main)

add_executable(TestNumLimitedPartialSum test_num_limited_partial_sum.cpp)
target_link_libraries(TestNumLimitedPartialSum NumLimitedPartialSum gtest_main)

add_executable(TestLis test_lis.cc)
target_link_libraries(TestLis Lis gtest_main)

add_executable(TestPartitionNum test_partition_num.cc)
target_link_libraries(TestPartitionNum PartitionNum gtest_main)

add_executable(TestMultiChoose test_multi_choose.cc)
target_link_libraries(TestMultiChoose MultiChoose gtest_main)

add_executable(TestTruck test_truck.cc)
target_link_libraries(TestTruck Truck gtest_main)

include_directories(${PROJECT_SOURCE_DIR}/src)
include(GoogleTest)

gtest_discover_tests(TestPartialsum)
gtest_discover_tests(TestBestCowLine)
gtest_discover_tests(TestMaze)
gtest_discover_tests(TestSaruman)
gtest_discover_tests(TestSectionScheduling)
gtest_discover_tests(TestFenceRepair)
gtest_discover_tests(TestFoodChain)
gtest_discover_tests(TestKnapsack)
gtest_discover_tests(TestLcs)
gtest_discover_tests(TestNoLimitKnapsack)
gtest_discover_tests(TestKnapsack2)
gtest_discover_tests(TestNumLimitedPartialSum)
gtest_discover_tests(TestLis)
gtest_discover_tests(TestPartitionNum)
gtest_discover_tests(TestMultiChoose)
gtest_discover_tests(TestTruck)
